<resources>
    <string name="app_name">Kırtasiye</string>
    <string name="shop">Kırtasiye</string>
    <string name="explore">Keşfet</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favoriler</string>
    <string name="account">Hesap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="card_number_placeholder">**** **** **** ****</string>
    <string name="card_holder">CARD HOLDER</string>
    <string name="expiry">Expiry</string>
    <string name="hint_card_holder_name">Card holder name</string>
    <string name="hint_card_number">Card number</string>
    <string name="hint_expiry_date">Expiry date</string>
    <string name="hint_cvv">CVV</string>
    <string name="card_expired">This card is expired</string>
    <string name="card_exp_date_error">Format exception</string>
    <string name="check_out">Check Out</string>
    <string name="check_out_made">Check Out Successful!</string>
</resources>