<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.anilari.order.ui.payment.PaymentViewModel" />

        <variable
            name="viewModel"
            type="PaymentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".ui.MainActivity">

        <include
            android:id="@+id/front_side"
            layout="@layout/card_front"
            visible="@{!viewModel.checkOut}"/>

        <include
            android:id="@+id/back_side"
            layout="@layout/card_back"
            visible="@{!viewModel.checkOut}"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            visible="@{!viewModel.checkOut}"
            android:layout_marginTop="24dp"
            android:hint="@string/hint_card_holder_name"
            app:layout_constraintTop_toBottomOf="@+id/front_side">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={viewModel.cardHolderName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_card_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            visible="@{!viewModel.checkOut}"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_card_number"
            app:layout_constraintTop_toBottomOf="@+id/text_input_name"
            tools:layout_editor_absoluteX="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.cardNumber}"
                android:inputType="number"
                android:maxLength="16" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_expiry_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            visible="@{!viewModel.checkOut}"
            android:hint="@string/hint_expiry_date"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_card_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_expiry_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:text="@={viewModel.cardExpiry}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_cvv"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            visible="@{!viewModel.checkOut}"
            android:hint="@string/hint_cvv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/text_input_card_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_card_cvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.cardCVV}"
                android:inputType="number"
                android:maxLength="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/temp_img"
            visible="@{viewModel.checkOut}"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/green_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/front_side" />

        <ImageView
            android:id="@+id/done"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/avd_done"
            app:layout_constraintBottom_toBottomOf="@+id/temp_img"
            app:layout_constraintEnd_toEndOf="@+id/temp_img"
            app:layout_constraintStart_toStartOf="@+id/temp_img"
            app:layout_constraintTop_toTopOf="@+id/temp_img" />

        <TextView
            android:id="@+id/tv_check_out_made"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.1"
            android:text="@string/check_out_made"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp_img"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:text="Geri Dön"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_expiry_date" />


        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.1"
            android:text="62.312 TL"
            visible="@{!viewModel.checkOut}"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_expiry_date" />

        <Button
            android:id="@+id/checkout_btn"
            visible="@{!viewModel.checkOut}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:text="@string/check_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_expiry_date" />

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:visibility="gone"
            android:text="flip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>